test/files/neg/t8450.check
t8450.scala:7: warning: implicit numeric widening
  def elapsed: Foo = (System.nanoTime - 100L).foo
                                      ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
